--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Pakdhe Wujud & Huda</h1>
-    <img src="Spanduk Menu Pak`dhe Wujud & Huda.png"; width="100%"; height="auto">
+    <img src="Menu Warung Pkdhe Wujud & Huda.png
+"; width="100%"; height="auto">
 </body>
+
 </html>
